@@ -204,7 +204,7 @@ Specifies the password to decrypt encrypted files. The password is assumed to be
 
 Use the \fB\-\-password-file\fP option to load the password from a file or standard input instead. This option cannot be combined with \fB\-\-password-file\fP.
 
-Use the \fB\-\-check\-password\fP option to abort processing entirely if the password is incorrect.
+If this password does not match the checksum stored in the installer, encrypted files will be skipped but unencrypted files will still be extracted. Use the \fB\-\-check\-password\fP option to abort processing entirely if the password is incorrect.
 .TP
 \fB\-\-password-file\fP \fIFILE\fP
 Load a password form the specified file. Only the first line excluding the terminating carriage return and/or line break is used as the password. The password is assumed to be encoded as UTF-8 and converted the internal according used in the installer as needed.
@@ -213,7 +213,7 @@ If the special file name "\fB-\fP" is used, the password will be read from stand
 
 Use the \fB\-\-password\fP option to specify the password on the command\-line instead. This option cannot be combined with \fB\-\-password\fP.
 
-Use the \fB\-\-check\-password\fP option to abort processing entirely if the password is incorrect.
+If this password does not match the checksum stored in the installer, encrypted files will be skipped but unencrypted files will still be extracted. Use the \fB\-\-check\-password\fP option to abort processing entirely if the password is incorrect.
 .TP
 \fB\-p\fP, \fB\-\-progress\fP[=\fIENABLE\fP]
 By default \fBinnoextract\fP will try to detect if the terminal supports shell escape codes and enable or disable progress bar output accordingly. Pass \fB1\fP or \fBtrue\fP to \fB\-\-progress\fP to force progress bar output. Pass \fB0\fP or \fBfalse\fP to never show a progress bar.
@@ -290,8 +290,6 @@ Included scripts and checks are not executed.
 The mapping from Inno Setup constants like the application directory to subdirectories is hard-coded.
 
 Names for data slice/disk files in multi-file installers must follow the standard naming scheme.
-
-Encrypted installers are not supported.
 .SH SEE ALSO
 \fBcabextract\fP(1), \fBunar\fP(1), \fBunrar\fP(1), \fBunshield\fP(1), \fBtzset\fP(3)
 .SH BUGS
