@@ -2,6 +2,7 @@
 innoextract 1.7 (TDB)
  - Added (preliminary) support for Inno Setup 5.6.0 installers
  - Added support for new GOG installers with GOG Galaxy file parts
+ - Added support for encrypted installers with the --password and --password-file options
  - Added a --show-password option to print password check information
  - Added a --check-password option to abort if the provided password does not match the stored checksum
  - Fixed building in paths that contain regex expressions
